test: add unit tests for AI/RAG services to meet SonarCloud coverage
Added comprehensive unit tests for AI/RAG pipeline services:
- VisualIntentExtractorTest: 16 tests (parsing, validation, markdown stripping)
- AgentChatServiceTest: 5 tests (chart/text routing, fallback)
- SemanticExpansionServiceTest: 9 tests (category/location expansion, fallback)
- ChartGenerationServiceTest: 6 tests (single/multi series, empty data, explanations)
- ChartQueryExecutorTest: 11 tests (SQL building, filters, validation, pivot)
- RagRetrievalServiceTest: 5 tests (context retrieval, formatting, sorting)

Also fixed SonarQube code quality issues:
- Extracted constants for repeated string literals
- Extracted nested ternaries into helper methods
- Replaced generic Exception with JsonProcessingException
- Removed unused parameter from ChartGenerationService.generate()
- Replaced Collectors.toList() with Stream.toList()
- Changed AgentResponseDTO constructor to protected
- Removed deprecated query() usage
- Removed commented-out code block

Total tests: 511 (was 462), all passing.